# SnDL

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pr-check.yml
dl/: CMakeLists.txt
dl/include/sndl/: api.h  defines.h  sndl.h
dl/src/: CMakeLists.txt
dl/src/nix/: sndl.c
dl/src/win32/: sndl.c
docs/: CMakeLists.txt  Doxyfile.in
test/: CMakeLists.txt  test.c  testlib.c
